--- a/passcss.css
+++ b/passcss.css
@@ -117,7 +117,7 @@ body {
 
 header {
 	text-align: center;		
-	background-color: #CEF279;
+	background-color: #FFFFFF;
 	letter-spacing: 8px;
 	font-weight: bold;
 	font-size: 8em;
@@ -128,7 +128,7 @@ header {
 	font-weight: bold;
 	font-size: 5em;
 	text-align: center;
-	background-color: #CEF279;
+	background-color: #FFFFFF;
 	line-height: 130%;
 	padding: 1%;
 }
